# spy-cat-agency

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  justfile  pyproject.toml
alembic/: README  env.py
alembic/versions/: 2026_01_16_1200-1234567890ab_add_cats_and_missions.py
src/: app.py  main.py
src/config/: db.py
src/db/models/: __init__.py  base.py  cat.py  mission.py
src/dependencies/: container.py  db_provider.py  repository_provider.py  service_provider.py
src/models/: cat.py  mission.py
src/repository/: cat.py  mission.py
src/routers/: cats.py  healthcheck.py  initialization.py  missions.py  root.py
src/services/: cat.py  mission.py
src/utils/: exceptions.py  typedicts.py
