[project]
name = "spy-cat-agency"
version = "1.0.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "dishka>=1.7.2",
    "fastapi>=0.118.0",
    "granian[reload]>=2.5.4",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "psycopg[binary]>=3.2.10",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "polyfactory>=2.22.2",
    "pytest>=8.4.2",
    "pytest-modified-env>=0.1.0",
    "pytest-randomly>=4.0.1",
    "pytest-recording>=0.13.4",
    "pytest-sugar>=1.1.1",
    "ruff>=0.13.1",
    "rust-just>=1.42.4",
]

[build-system]
requires=["uv_build>=0.8.20,<0.9.0"]
build-backend="uv_build"

[tool.uv.build-backend]
module-name = "src"
module-root = ""

[tool.mypy]
strict = true
plugins = ['pydantic.mypy']

[tool.ruff]
line-length = 120
preview = true

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["INP001"]
"tests/*" = ["S101", "ANN401", "PLR2004"]

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = [
    "D",
    "CPY",
    "TC",
    "T20",
    "ERA",
    "ANN401",
    "COM812", # warning
    "PLR6301", # static-method
    "FA100",
    "TRY003",
    "PERF203",
    "PYI025",
    "TRY300",
    "SIM108",
    "EM101",
]